Fixed whitespace on right side when using columns

--- a/sass/core/grid.sass
+++ b/sass/core/grid.sass
@@ -1,12 +1,16 @@
 /* Grid Module
 
+html
+  overflow-x: hidden
+  overflow-y: scroll
+
 $column-gutter: 0.75rem !default
 
 .columns
-  // margin:
-  //   top: (-$column-gutter)
-  //   left: (-$column-gutter)
-  //   right: (-$column-gutter)
+  margin:
+    top: (-$column-gutter)
+    left: (-$column-gutter)
+    right: (-$column-gutter)
 
   // Adding margin-bottom to the last child.
   &:last-child
